@@ -7,6 +7,8 @@ Revision history for Apache::AuthCookie
    - improve "removed cookie" debug log message
    - add dependencies: autobox, Class::Load
    - allow username to be '0'
+   - login_form: return OK for SymbianOS, which ignores content for FORBIDDEN responses.
+   - add login_form_status() to override HTTP status returned by login form
 
 3.18  2011-01-24
    - remove 3.17's test skip hacks, and bump Apache::Test prerequisite to v1.35
